# GraphScope

./: .gitmodules
flex/: CMakeLists.txt  make.sh  run.sh  run_valid.sh
flex/codegen/: CMakeLists.txt
flex/codegen/src/: graph_types.h  hqps_generator.h
flex/codegen/src/hqps/: hqps_edge_expand_builder.h  hqps_edge_expand_builder_new.h  hqps_expr_builder.h  hqps_expr_builder_new.h  hqps_get_v_builder_new.h  hqps_group_by_builder_new.h  hqps_scan_builder.h  hqps_select_builder_new.h  hqps_sink_builder.h  hqps_sort_builder_new.h
flex/engines/: CMakeLists.txt
flex/engines/graph_db/: CMakeLists.txt
flex/engines/graph_db/app/: adhoc_app.cc  adhoc_app.h  batch_update_app.cc  batch_update_app.h  cypher_app_utils.cc  cypher_app_utils.h  (+5 more)
flex/engines/http_server/: executor.act.cc  executor.act.h  graph_db_update_http_handler.cc  graph_db_update_server.h  graph_db_update_service.cc  graph_db_update_service.h
flex/planner/: CMakeLists.txt  config  graph_planner.cc
flex/storages/rt_mutable_graph/: dual_csr.h  file_names.cc  file_names.h  loading_config.cc  mutable_csr.cc  mutable_csr.h  mutable_property_fragment.cc  mutable_property_fragment.h  schema.cc  schema.h  types.h
flex/tests/hqps/: CMakeLists.txt  context_test.cc  query_test.cc
flex/tests/rt_mutable_graph/: test_graph_loading.cc
flex/utils/: CMakeLists.txt  allocators.h  arrow_utils.cc  arrow_utils.h  id_indexer.h  mmap_array.h
flex/utils/property/: column.cc  column.h  table.cc  table.h  types.cc  types.h
interactive_engine/: pom.xml
interactive_engine/assembly/: ic-compiler.xml  pom.xml
(+208 files in other folders)
